--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,9 @@ body {
   padding: 0;
   margin: 0;
 
-  font-family: monospace;
-  color: #444;
+  font-family: "consolas", monospace;
+  font-weight: 600;
+  color: #666;
   font-size: 13px;
 
   user-select: none;
@@ -58,7 +59,8 @@ div.arr {
   left: 0;
   right: 0;
   text-align: center;
-  color: #999;
+  color: #777;
+  font-weight: 500;
   font-size: 11px;
 }
 
@@ -75,7 +77,7 @@ div.arr {
 
 #links {
   position: absolute;
-  bottom: 190px;
+  bottom: 196px;
   left: 8px;
   z-index: 10001;
 }
@@ -85,35 +87,35 @@ div.arr {
   color: inherit;
   display: flex;
   align-items: center;
-  padding: 3px 6px 3px 5px;
-  margin: -2px -2px 1px -4px;
-  border: 1px solid rgba(0, 0, 0, 0);
+  padding: 3px 6px 3px 4px;
+  margin: -1px 1px 3px -3px;
   border-radius: 3px;
   width: min-content;
   white-space: nowrap;
 }
 
 #links img {
-  width: 14px;
-  height: 14px;
+  width: 15px;
+  height: 15px;
   margin-right: 5px;
 }
 
 #links a:hover {
   background-color: rgb(238, 242, 255);
-  border: 1px solid rgb(80, 115, 231);
+  box-shadow: 0 0 0 1.4px rgb(80, 115, 231);
   color: rgb(38, 72, 184);
 }
 
 #links #submission {
-  margin-top: 7px;
+  margin-top: 11px;
   font-size: 11px;
-  color: #999;
+  color: #777;
+  font-weight: 500;
 }
 
 #links #submission:hover {
   background-color: #f8f8f8;
-  border: 1px solid #bbb;
+  box-shadow: 0 0 0 1.4px #bbb;
 }
 
 #loaderbg {
